# django-slices-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/instructions/: graphql.instructions.md  models.instructions.md  permissions.instructions.md  python.instructions.md  rest-api.instructions.md  services.instructions.md  slices.instructions.md  testing.instructions.md  validators.instructions.md
.github/prompts/: slice.prompt.md
config/: asgi.py  context_processors.py  graphql.py  otel_setup.py  rest.py  urls.py  views.py
config/settings/: README.md  __init__.py  api.py  authentication.py  cache.py  database.py  deployment.py  email.py  files.py  i18n.py  installed_apps.py  logging.py  middleware.py  monitoring.py  security.py  templates.py  webserver.py
core/: apps.py  graphql.py  models.py  rest.py  signals.py
core/auth/: adapters.py  forms.py  graphql.py  models.py  permissions.py  rest.py  services.py  signals.py  token_strategy.py  validators.py
core/auth/tests/: factories.py  test_app_flows.py  test_graphql.py  test_rest.py  test_services.py
core/migrations/: 0001_initial.py
docs/guidelines/: README.md  graphql-guidelines.md  models-guidelines.md  permissions-guidelines.md  python-guidelines.md  rest-api-guidelines.md  services-guidelines.md  slices-guidelines.md  testing-guidelines.md  validators-guidelines.md
infra/grafana/provisioning/datasources/: datasource.yaml
infra/hive/: config_schema.json  router.yaml
infra/mailpit/: README.md
infra/otelcollector/: otel-collector-config.yaml
infra/restate/: README.md
infra/tempo/: .gitignore  tempo.yaml
infra/traefik/: README.md  traefik.local.yml  traefik.yml
lib/asyncutils/: utils.py
lib/errors/: __init__.py  base.py  utils.py
lib/graphql/: __init__.py  api.py  context.py  info.py  relay.py  schema.py  views.py
lib/logs/: __init__.py  decorators.py  formatter.py
lib/models/: base.py
lib/monitoring/: middleware.py
lib/pagination/: paginator.py
lib/permissions/: __init__.py  permission.py
lib/rest/: api.py  error_handlers.py  pagination.py  resources.py  stoplight.py  urls.py
lib/rest/tests/: test_error_handlers.py
lib/tests/: __init__.py  factory_faker.py
lib/validation/: __init__.py  base.py  validators.py
lib/validation/tests/: test_base.py  test_validators.py
src/config/: asgi.py  otel_setup.py  urls.py  views.py  wsgi.py
src/config/settings/: __init__.py  common.py  dev.py
src/core/: models.py
src/core/roles/: models.py
src/core/roles/tests/: factories.py
src/core/users/: models.py
src/core/users/tests/: factories.py
src/lib/asyncutils/: __init__.py
src/lib/errors/: __init__.py  base.py
src/lib/graphql/: __init__.py  authentication.py  context.py  info.py  loaders.py  mutations.py  relay.py  schema.py  types.py  views.py
src/lib/jsonutils/: __init__.py  utils.py
src/lib/logs/: __init__.py  decorators.py  formatter.py
src/lib/messages/: __init__.py
src/lib/models/: __init__.py
src/lib/monitoring/: __init__.py  middleware.py  tracing.py
src/lib/pagination/: __init__.py
src/lib/rest/: __init__.py  api.py  error_handlers.py  pagination.py  resources.py  types.py
src/lib/rest/tests/: test_error_handlers.py
src/lib/slices/: apps.py
src/lib/slices/management/commands/: startslice.py
src/lib/slices/management/templates/slice/: graphql.py-tpl  models.py-tpl  permissions.py-tpl  rest.py-tpl
src/lib/types/: __init__.py  requests.py
src/lib/validation/: base.py  validators.py
src/lib/validation/tests/: test_base.py  test_validators.py
templates/account/email/: account_already_exists_message.html  base_message.html  base_notification.html  email_changed_message.html  email_confirmation_message.html  email_confirmed_message.html  email_deleted_message.html  login_code_message.html  password_changed_message.html  password_reset_code_message.html  password_reset_key_message.html  password_reset_message.html  password_set_message.html  unknown_account_message.html
tools/: README.md
tools/management/commands/: hive.py  startslice.py
tools/management/templates/slice/: errors.py-tpl  graphql.py-tpl  permissions.py-tpl  services.py-tpl
tools/management/templates/slice/tests/: factories.py-tpl
